logs/googleappenginepipeline.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/GoogleAppEngineCloudStorageClient-1.9.22.1.egg-info'...
Listing './lib/python3.5/site-packages/GoogleAppEnginePipeline-1.9.22.1.egg-info'...
Listing './lib/python3.5/site-packages/cloudstorage'...
Compiling './lib/python3.5/site-packages/cloudstorage/api_utils.py'...
***   File "./lib/python3.5/site-packages/cloudstorage/api_utils.py", line 173
    except self.retriable_exceptions, e:
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cloudstorage/rest_api.py'...
***   File "./lib/python3.5/site-packages/cloudstorage/rest_api.py", line 248
    except app_identity.InternalError, e:
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cloudstorage/storage_api.py'...
***   File "./lib/python3.5/site-packages/cloudstorage/storage_api.py", line 129
    except urlfetch.DownloadError, e:
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pipeline'...
Compiling './lib/python3.5/site-packages/pipeline/__init__.py'...
***   File "./lib/python3.5/site-packages/pipeline/__init__.py", line 42
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pipeline/pipeline.py'...
***   File "./lib/python3.5/site-packages/pipeline/pipeline.py", line 581
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pipeline/status_ui.py'...
***   File "./lib/python3.5/site-packages/pipeline/status_ui.py", line 143
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pipeline/ui'...
Listing './lib/python3.5/site-packages/pipeline/ui/images'...
Compiling './lib/python3.5/site-packages/pipeline/util.py'...
***   File "./lib/python3.5/site-packages/pipeline/util.py", line 116
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
